v2.5.1/en/_sources/getting_started/screen_main.rst.txt
.. MusicBrainz Picard Documentation Project
.. Prepared in 2020 by Bob Swift (bswift@rsds.ca)
.. This MusicBrainz Picard User Guide is licensed under CC0 1.0
.. A copy of the license is available at https://creativecommons.org/publicdomain/zero/1.0


Main Screen
===========

.. index::
   single: user interface; main screen

.. Picard's main screen is comprised of a number of sections, as described below:

.. image:: ../images/screen_main.png
   :width: 100 %

1. **Menu Bar**: This provides the pull-down menu of actions that Picard can perform.

2. **Tool Bar**: This provides quick links to the main functions performed by Picard.  This can
   be customized by the user in the :doc:`User Interface Options <../config/options_interface>` settings.

3. **File Browser**: This provides a browser for selecting files and directories for processing.

4. **Cluster Pane**:  Often referred to as the "left-hand pane", this section allows the user to select
   and cluster files for scanning, lookup or matching.

5. **Album Pane**:  Often referred to as the "right-hand pane", this section displays the albums
   retrieved from MusicBrainz.  This is the section where files are matched to downloaded track
   information.

6. **Metadata Pane**: This section is a three-column table of the tag metadata for the album or track
   currently selected in the Album Pane.  The first column shows the tag name, the second shows the
   original value found in the file, and the third column shows the new value that will be written.

7. **Cover Art**: This shows the new cover art image that will be written to the selected album or
   track, along with the original cover art image found in the files matched to the selected album or
   track.

8. **Player**: The built-in player that can be used to play selected audio files.

9. **Status Bar**: The bar at the bottom of the screen shows information about the current operation
   of Picard, including such items as number of files, albums, and pending downloads.


Picard is available for different operating systems.  And while Picard's functionality is overall
the same the specific look of the user interface can be slightly different based on the operating
system.  Throughout the documentation screenshots taken on different operating systems are used.
Below you find a selection of screenshots of Picard's main screen on different systems:

.. figure:: ../images/mainscreen-windows10-light.png
   :width: 100 %

   Picard on Windows 10 (with light user interface)

.. figure:: ../images/mainscreen-windows10-dark.png
   :width: 100 %

   Picard on Windows 10 (with dark user interface)

.. figure:: ../images/mainscreen-macos-light.png
   :width: 100 %

   Picard on macOS 11 Big Sur

.. figure:: ../images/mainscreen-linux-plasma-light.png
   :width: 100 %

   Picard on Linux with the KDE Plasma desktop environment (light theme)

.. figure:: ../images/mainscreen-linux-plasma-dark.png
   :width: 100 %

   Picard on Linux with the KDE Plasma desktop environment (dark theme)

.. figure:: ../images/mainscreen-linux-gnome.png
   :width: 100 %

   Picard on Linux with the GNOME desktop environment

.. figure:: ../images/mainscreen-haiku.png
   :width: 100 %

   Picard on Haiku